...
                const SizedBox(height: 8),
                ExpansionTile(
                  shape: const Border(),
                  collapsedShape: const Border(),
                  tilePadding: EdgeInsets.zero,
                  childrenPadding: const EdgeInsets.only(top: 8, bottom: 8),
                  title: const Text('高级设置'),
                  subtitle: const Text('质量、背景、文件格式'),
                  children: [
                    Wrap(spacing: 12, runSpacing: 18, children: [
                      _field(
                          context,
                          '质量',
...
